syntax = "proto3";

package game.dto;

option java_multiple_files = true;
option java_package = "com.nekgamebling.game.dto";

import "dto/common.dto.proto";

// ============================================
// AGGREGATOR DOMAIN DTOs
// ============================================

// Aggregator configuration and info
message AggregatorInfoDto {
  string identity = 1;                    // Unique identifier
  map<string, string> config = 2;         // Configuration key-value pairs
  AggregatorTypeDto aggregator = 3;       // Aggregator type enum
  bool active = 4;                        // Active status
}

// Game information from aggregator (external game data)
message AggregatorGameDto {
  string symbol = 1;                      // Game symbol/code
  string name = 2;                        // Game name
  string provider_name = 3;               // Provider name from aggregator
  bool free_spin_enable = 4;              // Free spin support
  bool free_chip_enable = 5;              // Free chip support
  bool jackpot_enable = 6;                // Jackpot support
  bool demo_enable = 7;                   // Demo mode support
  bool bonus_buy_enable = 8;              // Bonus buy feature
  repeated string locales = 9;            // Supported locales
  repeated PlatformDto platforms = 10;    // Supported platforms
  int32 play_lines = 11;                  // Number of play lines
}

// List of aggregator info items
message AggregatorInfoListDto {
  repeated AggregatorInfoDto items = 1;
  PaginationMetaDto pagination = 2;
}
