syntax = "proto3";

package game.dto;

option java_multiple_files = true;
option java_package = "com.nekgamebling.game.dto";

// ============================================
// ENUMS
// ============================================

enum PlatformDto {
  PLATFORM_UNSPECIFIED = 0;
  PLATFORM_DESKTOP = 1;
  PLATFORM_MOBILE = 2;
  PLATFORM_DOWNLOAD = 3;
}

enum SpinTypeDto {
  SPIN_TYPE_UNSPECIFIED = 0;
  SPIN_TYPE_PLACE = 1;
  SPIN_TYPE_SETTLE = 2;
  SPIN_TYPE_ROLLBACK = 3;
}

enum AggregatorTypeDto {
  AGGREGATOR_UNSPECIFIED = 0;
  AGGREGATOR_ONEGAMEHUB = 1;
  AGGREGATOR_PRAGMATIC = 2;
  AGGREGATOR_PATEPLAY = 3;
}

enum RoundStatusDto {
  ROUND_STATUS_UNSPECIFIED = 0;
  ROUND_STATUS_ACTIVE = 1;
  ROUND_STATUS_FINISHED = 2;
}

// Error codes for structured error handling
// Code ranges:
// - 1xxx: General errors
// - 2xxx: Balance/Betting errors
// - 3xxx: Session errors
// - 4xxx: Game errors
// - 5xxx: Aggregator errors
// - 6xxx: External service errors
// - 9xxx: Internal errors
enum ErrorCodeDto {
  ERROR_CODE_UNSPECIFIED = 0;

  // General errors (1xxx)
  ERROR_CODE_NOT_FOUND = 1000;
  ERROR_CODE_VALIDATION_ERROR = 1001;
  ERROR_CODE_DUPLICATE_ENTITY = 1002;
  ERROR_CODE_ILLEGAL_STATE = 1003;

  // Balance/Betting errors (2xxx)
  ERROR_CODE_INSUFFICIENT_BALANCE = 2000;
  ERROR_CODE_BET_LIMIT_EXCEEDED = 2001;

  // Session errors (3xxx)
  ERROR_CODE_SESSION_INVALID = 3000;

  // Game errors (4xxx)
  ERROR_CODE_GAME_UNAVAILABLE = 4000;
  ERROR_CODE_ROUND_FINISHED = 4001;
  ERROR_CODE_ROUND_NOT_FOUND = 4002;
  ERROR_CODE_INVALID_PRESET = 4003;

  // Aggregator errors (5xxx)
  ERROR_CODE_AGGREGATOR_NOT_SUPPORTED = 5000;
  ERROR_CODE_AGGREGATOR_ERROR = 5001;

  // External/Internal errors (6xxx, 9xxx)
  ERROR_CODE_EXTERNAL_SERVICE_ERROR = 6000;
  ERROR_CODE_INTERNAL_ERROR = 9999;
}

// ============================================
// VALUE OBJECTS
// ============================================

// Map of locale code to localized string value
message LocaleNameDto {
  map<string, string> values = 1;
}

// Map of image type/key to image URL
message ImageMapDto {
  map<string, string> images = 1;
}

// Balance value object
message BalanceDto {
  string real = 1;       // BigInteger as string
  string bonus = 2;      // BigInteger as string
  string currency = 3;
  string total = 4;      // Computed: real + bonus
}

// Bet amount value object
message BetAmountDto {
  string real = 1;       // BigInteger as string
  string bonus = 2;      // BigInteger as string
  string currency = 3;
  string total = 4;      // Computed: real + bonus
}

// Pagination request
message PaginationRequestDto {
  int32 page = 1;
  int32 size = 2;
}

// Pagination response metadata
message PaginationMetaDto {
  int32 page = 1;
  int32 size = 2;
  int64 total_elements = 3;
  int32 total_pages = 4;
}

// Timestamp wrapper for datetime fields
message TimestampDto {
  int64 seconds = 1;
  int32 nanos = 2;
}
