syntax = "proto3";

package game.dto;

option java_multiple_files = true;
option java_package = "com.nekgamebling.game.dto";

import "dto/common.dto.proto";
import "dto/provider.dto.proto";
import "dto/aggregator.dto.proto";
import "dto/collection.dto.proto";

// ============================================
// GAME DOMAIN DTOs
// ============================================

// Core Game entity
message GameDto {
  string identity = 1;                    // Unique identifier
  string name = 2;                        // Game name
  string provider_identity = 3;           // Provider identity reference
  ImageMapDto images = 4;                 // Game images
  bool bonus_bet_enable = 5;              // Bonus bet support
  bool bonus_wagering_enable = 6;         // Bonus wagering support
  repeated string tags = 7;               // Game tags
  bool active = 8;                        // Active status
}

// Game Variant - specific version of a game for an aggregator
message GameVariantDto {
  string symbol = 1;                      // Game symbol/code (unique per aggregator)
  optional string game_identity = 2;      // Game identity reference (nullable)
  string name = 3;                        // Variant name
  string provider_name = 4;               // Provider name from aggregator
  AggregatorTypeDto aggregator = 5;       // Aggregator type
  bool free_spin_enable = 6;              // Free spin support
  bool free_chip_enable = 7;              // Free chip support
  bool jackpot_enable = 8;                // Jackpot support
  bool demo_enable = 9;                   // Demo mode support
  bool bonus_buy_enable = 10;             // Bonus buy feature
  repeated string locales = 11;           // Supported locales
  repeated PlatformDto platforms = 12;    // Supported platforms
  int32 play_lines = 13;                  // Number of play lines
}

// Game with full details (read model)
message GameWithDetailsDto {
  string identity = 1;                    // Unique identifier
  string name = 2;                        // Game name
  ImageMapDto images = 3;                 // Game images
  bool bonus_bet_enable = 4;              // Bonus bet support
  bool bonus_wagering_enable = 5;         // Bonus wagering support
  repeated string tags = 6;               // Game tags
  string symbol = 7;                      // Game symbol
  bool free_spin_enable = 8;              // Free spin support
  bool free_chip_enable = 9;              // Free chip support
  bool jackpot_enable = 10;               // Jackpot support
  bool demo_enable = 11;                  // Demo mode support
  bool bonus_buy_enable = 12;             // Bonus buy feature
  repeated string locales = 13;           // Supported locales
  repeated PlatformDto platforms = 14;    // Supported platforms
  int32 play_lines = 15;                  // Number of play lines
  ProviderDto provider = 16;              // Provider details
  AggregatorInfoDto aggregator = 17;      // Aggregator details
}

// Game variant with related details
message GameVariantWithDetailDto {
  GameVariantDto variant = 1;             // Variant data
  optional GameDto game = 2;              // Game data (nullable)
  optional ProviderDto provider = 3;      // Provider data (nullable)
}

// Game list item with all related data
message GameListItemDto {
  GameDto game = 1;                       // Game data
  GameVariantDto variant = 2;             // Variant data
  ProviderDto provider = 3;               // Provider data
  repeated CollectionDto collections = 4; // Collections containing this game
}

// Game filter for queries
message GameFilterDto {
  string query = 1;                       // Search query
  optional bool active = 2;               // Filter by active status
  optional bool bonus_bet = 3;            // Filter by bonus bet
  optional bool bonus_wagering = 4;       // Filter by bonus wagering
  optional bool free_spin_enable = 5;     // Filter by free spin
  optional bool free_chip_enable = 6;     // Filter by free chip
  optional bool jackpot_enable = 7;       // Filter by jackpot
  optional bool demo_enable = 8;          // Filter by demo mode
  optional bool bonus_buy_enable = 9;     // Filter by bonus buy
  repeated PlatformDto platforms = 10;    // Filter by platforms
  repeated string provider_identities = 11; // Filter by provider identities
  repeated string collection_identities = 12; // Filter by collection identities
  repeated string tags = 13;              // Filter by tags
  optional string player_identity = 14;   // Filter by player (for favorites)
}

// Game variant filter for queries
message GameVariantFilterDto {
  string query = 1;                       // Search query
  optional AggregatorTypeDto aggregator = 2; // Filter by aggregator
  optional string game_identity = 3;      // Filter by game identity
}

// List of games
message GameListDto {
  repeated GameDto items = 1;
  PaginationMetaDto pagination = 2;
}

// List of game variants
message GameVariantListDto {
  repeated GameVariantDto items = 1;
  PaginationMetaDto pagination = 2;
}

// List of game list items
message GameListItemListDto {
  repeated GameListItemDto items = 1;
  PaginationMetaDto pagination = 2;
}

// List of games with details
message GameWithDetailsListDto {
  repeated GameWithDetailsDto items = 1;
  PaginationMetaDto pagination = 2;
}
